Update styles and fix exit button position

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 Are you annoyed yet? <br>
                 You are playing an impossible game!!
             </h5>
+            <button id="exit-btn" class="btn exit-btn">
+                Stop Game
+            </button>
         </div>
 
         <script src="script.js"></script>
